ecmascript/parser/tests/test262-error-references/fail/420d5571366f2df6.js.stderr
error: Unexpected token `-`. Expected yield, an identifier, [ or {
 --> $DIR/tests/test262-parser/fail/420d5571366f2df6.js:1:15
  |
1 | try {} catch (-x) {} 
  |               ^

